version 0.9.2+
	* Fix parsing of ports on redis URL (patch by Alcides Viamontes)
	* Make hashing robust to different orders when using randomized hashing
	(patch by Alcides Viamontes)
	* Allow regex in invalidate command (patch by Alcides Viamontes)
	* Add --cache --clear suboption to status
	* Allow builtin functions for tasks

version 0.9.2 Sun Nov 4 2012 by luispedro
	* More flexible mapreduce()/map() functions
	* Make TaskGenerator pickle()able and hash()able
	* Add invalidate() method to Task
	* Add --keep-going option to execute
	* Better help messsage

version 0.9.1 Mon Jun 11 2012 by luispedro
	* Add --locks-only option to cleanup subcommand
	* Make cache file (for `status` subcommand) configurable
	* Add `webstatus` subcommand
	* Add bvalue() function
	* Fix bug in `shell` subcommand (`value` was not in global namespace)
	* Improve identity()
	* Fix bug in using Tasklets and --aggressive-unload
	* Fix bug with Tasklets and sleep-until/check

version 0.9 Mon Dec 5 2011 by luispedro
	* In the presence of a barrier(), rerun the jugfile
	* Add set_jugdir to public API
	* Added CompoundTaskGenerator
	* Support subclassing of Task
	* Avoid creating directories in file backend unless it is necessary
	* Add jug.mapreduce.reduce (which mimicks the builtin reduce)

version 0.8.1 Tue Jul 5 2011 by luispedro
	* Fix redis backend for new version of client module
	* Faster file store for large files
	* Fix `invalidate` with Tasklets
	* Install tests and have them be runnable
	* Changed hash computation method. This has a special case on numpy arrays
	(for speed) and is more extensible through a __jug_hash__ hook
	* Fix bug with Tasklet dependencies not being properly taken into account
	* Fix shell subcommand in newer versions of ipython
	* Add __file__ attribute to fake jugmodule

version 0.8 Sun Mar 27 2011 by luispedro
	* Tasklets
	* Fix bug in sleep-until
	* Fix bug in cleanup
	* Fix bug in status with --cache options (was non functional)