@@ -5,6 +5,8 @@ version 0.9.2+
 	* Allow regex in invalidate command (patch by Alcides Viamontes)
 	* Add --cache --clear suboption to status
 	* Allow builtin functions for tasks
+	* Fix status --cache (a general bug which seems to be triggered mainly by
+	bvalue() usage).
 
 version 0.9.2 Sun Nov 4 2012 by luispedro
 	* More flexible mapreduce()/map() functions
